care/force-app/main/default/objects/Article_Snapshot__c/Article_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Article Snapshot</label>
    <nameField>
        <label>Article Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Article Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>