care/force-app/main/default/objects/Article_Snapshot__c/fields/Article_ID__c.field-meta.xml
<CustomField>
    <fullName>Article_ID__c</fullName>
    <label>Article ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>