care/force-app/main/default/objects/Article_Snapshot__c/fields/Total_Views__c.field-meta.xml
<CustomField>
    <fullName>Total_Views__c</fullName>
    <label>Total Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>