care/force-app/main/default/objects/Article_Snapshot__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>TEXT(YEAR( Snapshot_Date__c ))</formula>
    <label>Year</label>
    <type>Text</type>
</CustomField>